# littlelemon

./: .env.template  .pre-commit-config.yaml  README.md  dev-requirements.txt  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: django.yml
LittleLemon/: settings.py  urls.py
api/: serializers.py  urls.py  views.py
restaurant/: models.py  views.py
restaurant/migrations/: 0001_initial.py
restaurant/templates/restaurant/: index.html
restaurant/tests/: conftest.py  test_models.py
tests/: conftest.py
tests/test_api/: test_views.py
tests/test_restaurant/: factories.py  test_views.py
tests/test_user_auth/: test_endpoints.py
